--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -226,25 +226,52 @@ jobs:
       - name: Setup Playwright browsers (one-time install on runner)
         run: |
           # Use persistent location on self-hosted runner (no sudo needed)
-          export PLAYWRIGHT_BROWSERS_PATH=$HOME/.playwright-browsers-persistent
+          export PLAYWRIGHT_BROWSERS_PATH="$HOME/.playwright-browsers-persistent"
+          
+          echo "Using Playwright browsers path: $PLAYWRIGHT_BROWSERS_PATH"
+          
+          # Clear any old default browser installations that might conflict
+          if [ -d "$HOME/.cache/ms-playwright" ] && [ "$HOME/.cache/ms-playwright" != "$PLAYWRIGHT_BROWSERS_PATH" ]; then
+            echo "🧹 Clearing old default browser cache at ~/.cache/ms-playwright"
+            rm -rf "$HOME/.cache/ms-playwright"
+          fi
           
           # Check if browsers are already installed
           if [ -d "$PLAYWRIGHT_BROWSERS_PATH" ] && [ "$(ls -A $PLAYWRIGHT_BROWSERS_PATH 2>/dev/null)" ]; then
             echo "✅ Playwright browsers already installed in $PLAYWRIGHT_BROWSERS_PATH"
+            echo "Contents:" && ls -la "$PLAYWRIGHT_BROWSERS_PATH" | head -5
             echo "Checking browser versions..."
-            cd packages/web && yarn playwright --version
+            cd packages/web && PLAYWRIGHT_BROWSERS_PATH="$PLAYWRIGHT_BROWSERS_PATH" yarn playwright --version
           else
             echo "📦 Installing Playwright browsers (one-time setup)..."
-            mkdir -p $PLAYWRIGHT_BROWSERS_PATH
-            cd packages/web && yarn playwright install
+            mkdir -p "$PLAYWRIGHT_BROWSERS_PATH"
+            cd packages/web && PLAYWRIGHT_BROWSERS_PATH="$PLAYWRIGHT_BROWSERS_PATH" yarn playwright install
             echo "✅ Playwright browsers installed to $PLAYWRIGHT_BROWSERS_PATH"
+            echo "Installed browsers:" && ls -la "$PLAYWRIGHT_BROWSERS_PATH"
           fi
         env:
           PLAYWRIGHT_BROWSERS_PATH: $HOME/.playwright-browsers-persistent
 
 
+      - name: Validate Playwright browsers before testing
+        run: |
+          export PLAYWRIGHT_BROWSERS_PATH="$HOME/.playwright-browsers-persistent"
+          echo "Validating Playwright browsers at: $PLAYWRIGHT_BROWSERS_PATH"
+          if [ -d "$PLAYWRIGHT_BROWSERS_PATH" ] && [ "$(ls -A $PLAYWRIGHT_BROWSERS_PATH 2>/dev/null)" ]; then
+            echo "✅ Browser directory exists and contains:" && ls "$PLAYWRIGHT_BROWSERS_PATH"
+            cd packages/web && PLAYWRIGHT_BROWSERS_PATH="$PLAYWRIGHT_BROWSERS_PATH" yarn playwright install --dry-run || echo "Browsers need installation"
+          else
+            echo "❌ No browsers found at $PLAYWRIGHT_BROWSERS_PATH"
+            exit 1
+          fi
+        env:
+          PLAYWRIGHT_BROWSERS_PATH: $HOME/.playwright-browsers-persistent
+
       - name: Run E2E Tests against Staging
-        run: cd packages/web && yarn playwright test --config=playwright-e2e.config.ts
+        run: |
+          export PLAYWRIGHT_BROWSERS_PATH="$HOME/.playwright-browsers-persistent"
+          echo "Running tests with Playwright browsers at: $PLAYWRIGHT_BROWSERS_PATH"
+          cd packages/web && PLAYWRIGHT_BROWSERS_PATH="$PLAYWRIGHT_BROWSERS_PATH" yarn playwright test --config=playwright-e2e.config.ts
         env:
           PLAYWRIGHT_BROWSERS_PATH: $HOME/.playwright-browsers-persistent
           STAGING_BASE_URL: ${{ needs.deploy-staging.outputs.staging-url }}
