--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -108,19 +108,19 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Check staging .env file exists
+      - name: Check config file exists
         run: |
-          if [ ! -f .env.staging ]; then
-            echo "Error: .env.staging file not found!"
-            echo "Please create .env.staging from env.staging.example"
-            echo "See STAGING_README.md for details"
+          if [ ! -f config.env ]; then
+            echo "Error: config.env file not found!"
+            echo "Please ensure config.env exists in the project root"
             exit 1
           fi
+          echo "✅ Found config.env file"
 
       - name: Clean staging databases
         run: |
           # Stop staging services
-          docker compose -f docker-compose.staging.yml down -v
+          docker compose -f docker-compose.staging.yml --env-file config.env down -v
           
           # Remove any existing staging volumes to ensure clean state
           docker volume rm jewellery-catalogue-staging-mongo-data 2>/dev/null || true
@@ -143,20 +143,20 @@ jobs:
           export COMPOSE_DOCKER_CLI_BUILD=1
           export BUILDX_CACHE="$HOME/.persistent-ci/docker-buildx-cache"
           
-          # Load environment variables from .env.staging
+          # Load environment variables from config.env
           set -a  # automatically export all variables
-          source .env.staging
+          source config.env
           set +a  # stop automatically exporting
           
           echo "Building with VITE_AUTH_URL=$VITE_AUTH_URL"
           
           # Build with environment variables properly loaded
-          docker compose -f docker-compose.staging.yml build \
+          docker compose -f docker-compose.staging.yml --env-file config.env build \
             --build-arg BUILDKIT_INLINE_CACHE=1
 
       - name: Deploy to staging
         run: |
-          docker compose -f docker-compose.staging.yml up -d
+          docker compose -f docker-compose.staging.yml --env-file config.env up -d
 
       - name: Wait for staging services to be ready
         run: |
@@ -351,5 +351,5 @@ jobs:
       - name: Cleanup staging
         run: |
           # Clean up staging environment after successful production deployment
-          docker compose -f docker-compose.staging.yml down -v
+          docker compose -f docker-compose.staging.yml --env-file config.env down -v
 
