--- a/docker-compose.staging.yml
+++ b/docker-compose.staging.yml
@@ -7,7 +7,7 @@ services:
       - "8071:9001"
     command: [ "server", "--console-address", ":9001", "/data/minio" ]
     env_file:
-    - .env.staging
+    - config.env
     volumes:
       - jewellery-catalogue-staging-minio-data:/data/minio
     labels:
@@ -48,7 +48,7 @@ services:
       context: .
       dockerfile: packages/api/Dockerfile
     env_file:
-      - .env.staging
+      - config.env
     ports:
       - '5001:5001'
     depends_on:
@@ -74,7 +74,7 @@ services:
       context: .
       dockerfile: packages/auth/Dockerfile
     env_file:
-      - .env.staging
+      - config.env
     ports:
       - '5002:5002'
     depends_on:
@@ -102,7 +102,7 @@ services:
          VITE_AUTH_URL: ${VITE_AUTH_URL}
     container_name: jewellery-catalogue-staging-web 
     env_file:
-    - .env.staging
+    - config.env
     ports:
       - '8082:80'
     depends_on:
