--- a/config.env
+++ b/config.env
@@ -1,5 +1,5 @@
 # Staging Environment Configuration for Jewellery Catalogue
-
+STAGING_BASE_URL=http://localhost:8082
 # Frontend Environment Variables (used by Vite during build)
 VITE_API_URL=http://localhost:5001
 VITE_AUTH_URL=http://localhost:5002
