--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -282,10 +282,13 @@ jobs:
         run: |
           export PLAYWRIGHT_BROWSERS_PATH="$HOME/.playwright-browsers-persistent"
           echo "Running tests with Playwright browsers at: $PLAYWRIGHT_BROWSERS_PATH"
-          cd packages/web && PLAYWRIGHT_BROWSERS_PATH="$PLAYWRIGHT_BROWSERS_PATH" yarn playwright test --config=playwright-e2e.config.ts
+          cd packages/web && PLAYWRIGHT_BROWSERS_PATH="$PLAYWRIGHT_BROWSERS_PATH" yarn pw:e2e
         env:
           PLAYWRIGHT_BROWSERS_PATH: $HOME/.playwright-browsers-persistent
+          PLAYWRIGHT_TEST_TYPE: e2e
           STAGING_BASE_URL: ${{ needs.deploy-staging.outputs.staging-url }}
+          E2E_API_SERVICE_URL: http://localhost:5001
+          E2E_AUTH_SERVICE_URL: http://localhost:5002
 
       - name: Upload E2E test results
         uses: actions/upload-artifact@v4
