--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -7,13 +7,13 @@
         "build": "vite build --emptyOutDir",
         "test": "vitest --coverage",
         "pw:install": "PLAYWRIGHT_BROWSERS_PATH=~/.cache/ms-playwright playwright install --with-deps",
-        "pw:run": "playwright test",
-        "pw:e2e": "playwright test",
-        "pw:e2e:local": "playwright test",
-        "pw:e2e:staging": "NODE_ENV=staging playwright test",
-        "pw:e2e:headed": "playwright test --headed",
-        "pw:e2e:debug": "playwright test --debug",
-        "pw:open": "playwright test --ui",
+        "pw:run": "playwright test --config=playwright.config.ts",
+        "pw:e2e": "playwright test --config=playwright.config.ts",
+        "pw:e2e:local": "playwright test --config=playwright.config.ts",
+        "pw:e2e:staging": "NODE_ENV=staging playwright test --config=playwright.config.ts",
+        "pw:e2e:headed": "playwright test --config=playwright.config.ts --headed",
+        "pw:e2e:debug": "playwright test --config=playwright.config.ts --debug",
+        "pw:open": "playwright test --config=playwright.config.ts --ui",
         "preview": "vite preview"
     },
     "dependencies": {
