--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -278,11 +278,38 @@ jobs:
           
           echo "🏃 Ready to run E2E tests!"
 
+      - name: Verify Playwright Configuration
+        run: |
+          cd packages/web
+          echo "🔍 Verifying Playwright configuration..."
+          echo "Current directory: $(pwd)"
+          echo "Config file exists: $(test -f playwright.config.ts && echo 'YES' || echo 'NO')"
+          echo "Test files exist: $(test -d tests/e2e && echo 'YES' || echo 'NO')"
+          echo "Listing test files: $(find tests/e2e -name '*.spec.ts' -type f | wc -l) files found"
+          
+          # Test configuration loading
+          yarn playwright test --config=playwright.config.ts --list --reporter=line || {
+            echo "❌ Failed to load Playwright configuration"
+            echo "Trying to diagnose the issue..."
+            yarn playwright --version
+            node --version
+            yarn --version
+            exit 1
+          }
+          echo "✅ Playwright configuration verified successfully"
+
       - name: Run E2E Tests against Staging
         run: |
           export PLAYWRIGHT_BROWSERS_PATH="$HOME/.playwright-browsers-persistent"
           echo "Running tests with Playwright browsers at: $PLAYWRIGHT_BROWSERS_PATH"
-          cd packages/web && PLAYWRIGHT_BROWSERS_PATH="$PLAYWRIGHT_BROWSERS_PATH" yarn pw:e2e
+          echo "Current working directory: $(pwd)"
+          echo "Directory contents: $(ls -la)"
+          cd packages/web
+          echo "Changed to packages/web directory: $(pwd)"
+          echo "Web directory contents: $(ls -la)"
+          echo "Playwright config exists: $(ls -la playwright.config.ts)"
+          echo "Test directory contents: $(ls -la tests/e2e/)"
+          PLAYWRIGHT_BROWSERS_PATH="$PLAYWRIGHT_BROWSERS_PATH" yarn playwright test --config=playwright.config.ts
         env:
           PLAYWRIGHT_BROWSERS_PATH: $HOME/.playwright-browsers-persistent
           STAGING_BASE_URL: ${{ needs.deploy-staging.outputs.staging-url }}
