--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
     "license": "MIT",
     "scripts": {
         "start:web": "dotenv -e .env -- yarn workspace @jewellery-catalogue/web start",
+        "start:web:with-mock": "dotenv -e .env -- yarn workspace @jewellery-catalogue/web start:with-mock",
         "start:api": "dotenv -e .env -- yarn workspace @jewellery-catalogue/api start",
-        "start": "yarn start:web & yarn start:api"
+        "start": "yarn start:web & yarn start:api",
+        "start:with-mock": "yarn start:web:with-mock & yarn start:api"
     },
     "workspaces": [
         "packages/*"
@@ -18,6 +20,7 @@
         "@stylistic/eslint-plugin": "^5.1.0",
         "@typescript-eslint/eslint-plugin": "^8.36.0",
         "@typescript-eslint/parser": "^8.36.0",
+        "concurrently": "^9.2.1",
         "dotenv-cli": "^8.0.0",
         "eslint": "^9.30.1",
         "eslint-plugin-import": "^2.32.0",
