--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -7,6 +7,7 @@
         "build": "tsup"
     },
     "dependencies": {
+        "@igor-siergiej/api-utils": "0.0.5",
         "@koa/cors": "^5.0.0",
         "koa": "^3.0.0",
         "koa-body": "^6.0.1",
