--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -8,6 +8,11 @@ on:
   workflow_dispatch:
 
 jobs:
+  ci:
+    if: ${{ !contains(github.event.head_commit.message, '[skip ci]') }}
+    uses: igor-siergiej/im-apps-utils/.github/workflows/ci.yml@main
+    secrets: inherit
+
   build-web:
     uses: igor-siergiej/im-apps-utils/.github/workflows/docker-build.yml@main
     with:
