--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,4 +1,10 @@
 nodeLinker: node-modules
+npmAlwaysAuth: false
+npmRegistryServer: "https://registry.npmjs.org"
+npmRegistries:
+  "https://npm.pkg.github.com":
+    npmAlwaysAuth: true
+    npmAuthToken: "${PAT_TOKEN}"
 
 npmScopes:
   igor-siergiej:
