--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -20,6 +20,7 @@
     "dependencies": {
         "@emotion/react": "^11.14.0",
         "@emotion/styled": "^11.14.1",
+        "@igor-siergiej/web-utils": "^0.0.6",
         "@mui/icons-material": "^7.2.0",
         "@mui/lab": "^7.0.0-beta.14",
         "@mui/material": "^7.2.0",
