--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -21,48 +21,50 @@
         "@emotion/react": "^11.14.0",
         "@emotion/styled": "^11.14.1",
         "@igor-siergiej/web-utils": "^0.0.6",
-        "@mui/icons-material": "^7.2.0",
-        "@mui/lab": "^7.0.0-beta.14",
-        "@mui/material": "^7.2.0",
-        "@mui/styled-engine-sc": "^7.2.0",
-        "@mui/system": "^7.2.0",
-        "@mui/x-data-grid": "^8.8.0",
-        "@mui/x-date-pickers": "^8.8.0",
+        "@radix-ui/react-checkbox": "^1.3.2",
+        "@radix-ui/react-dialog": "^1.1.14",
+        "@radix-ui/react-label": "^2.1.7",
+        "@radix-ui/react-scroll-area": "^1.2.10",
+        "@radix-ui/react-select": "^2.2.6",
+        "@radix-ui/react-slot": "^1.2.3",
+        "@tailwindcss/vite": "^4.1.11",
         "@tanstack/react-query": "^5.83.0",
         "@testing-library/dom": "^10.4.0",
         "@testing-library/jest-dom": "^6.6.3",
         "@testing-library/react": "^16.3.0",
         "@testing-library/user-event": "^14.6.1",
-        "body-parser": "^1.20.2",
+        "class-variance-authority": "^0.7.1",
+        "clsx": "^2.1.1",
         "concurrently": "^8.2.2",
         "cookie-parser": "^1.4.7",
         "cors": "^2.8.5",
         "datejs": "^1.0.0-rc3",
         "dayjs": "^1.11.13",
-        "express": "^4.18.2",
         "jsdom": "^26.1.0",
+        "lucide-react": "^0.539.0",
         "prettier": "^3.6.2",
         "react": "^19.1.0",
         "react-dom": "^19.1.0",
         "react-hook-form": "^7.60.0",
-        "react-quill": "^2.0.0",
         "react-router-dom": "^7.6.3",
-        "styled-components": "^6.1.19",
+        "shadcn": "^2.10.0",
+        "tailwind-merge": "^3.3.1",
+        "tailwindcss": "^4.1.11",
         "tss-react": "^4.9.19",
         "typescript": "^5.8.3",
         "web-vitals": "^5.0.3"
     },
     "devDependencies": {
         "@playwright/test": "^1.54.1",
-        "@types/cookie-parser": "^1",
+        "@tailwindcss/postcss": "^4.1.11",
         "@types/jest": "^30.0.0",
-        "@types/node": "^24.0.13",
         "@types/react": "^19.1.8",
         "@types/react-dom": "^19.1.6",
         "@typescript-eslint/eslint-plugin": "^8.36.0",
         "@typescript-eslint/parser": "^8.36.0",
         "@vitejs/plugin-react": "^4.7.0",
         "@vitest/coverage-v8": "^3.2.4",
+        "autoprefixer": "^10.4.21",
         "eslint": "^9.30.1",
         "eslint-config-prettier": "^10.1.5",
         "eslint-plugin-jsx-a11y": "^6.10.2",
@@ -70,6 +72,8 @@
         "eslint-plugin-react": "^7.37.5",
         "eslint-plugin-react-hooks": "^5.2.0",
         "eslint-plugin-react-refresh": "^0.4.20",
+        "postcss": "^8.5.6",
+        "tailwindcss-animate": "^1.0.7",
         "vite": "^7.0.4",
         "vitest": "^3.2.4",
         "vitest-fetch-mock": "^0.4.5"
