--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -22,11 +22,14 @@
         "@emotion/styled": "^11.14.1",
         "@igor-siergiej/web-utils": "^0.0.6",
         "@radix-ui/react-checkbox": "^1.3.2",
-        "@radix-ui/react-dialog": "^1.1.14",
+        "@radix-ui/react-dialog": "^1.1.15",
+        "@radix-ui/react-dropdown-menu": "^2.1.16",
         "@radix-ui/react-label": "^2.1.7",
         "@radix-ui/react-scroll-area": "^1.2.10",
         "@radix-ui/react-select": "^2.2.6",
+        "@radix-ui/react-separator": "^1.1.7",
         "@radix-ui/react-slot": "^1.2.3",
+        "@radix-ui/react-tooltip": "^1.2.8",
         "@tailwindcss/vite": "^4.1.11",
         "@tanstack/react-query": "^5.83.0",
         "@testing-library/dom": "^10.4.0",
@@ -41,7 +44,7 @@
         "datejs": "^1.0.0-rc3",
         "dayjs": "^1.11.13",
         "jsdom": "^26.1.0",
-        "lucide-react": "^0.539.0",
+        "lucide-react": "^0.544.0",
         "prettier": "^3.6.2",
         "react": "^19.1.0",
         "react-dom": "^19.1.0",
