--- a/package.json
+++ b/package.json
@@ -1,45 +1,40 @@
 {
-    "private": true,
-    "repository": "git@github.com:igor-siergiej/jewellery-catalogue.git",
-    "author": "Igor Siergiej <igorsiergiej@gmail.com>",
-    "license": "MIT",
-    "scripts": {
-        "start:web": "dotenv -e .env -- yarn workspace @jewellery-catalogue/web start",
-        "start:web:with-mock": "dotenv -e .env -- yarn workspace @jewellery-catalogue/web start:with-mock",
-        "start:api": "dotenv -e .env -- yarn workspace @jewellery-catalogue/api start",
-        "start": "yarn start:web & yarn start:api",
-        "start:with-mock": "yarn start:web:with-mock & yarn start:api",
-        "lint": "eslint . --ext .ts,.tsx",
-        "lint:fix": "eslint . --ext .ts,.tsx --fix"
-    },
-    "workspaces": [
-        "packages/*"
-    ],
-    "devDependencies": {
-        "@eslint/js": "^9.30.1",
-        "@eslint/json": "^0.13.0",
-        "@eslint/plugin-kit": "^0.3.3",
-        "@stylistic/eslint-plugin": "^5.1.0",
-        "@typescript-eslint/eslint-plugin": "^8.36.0",
-        "@typescript-eslint/parser": "^8.36.0",
-        "concurrently": "^9.2.1",
-        "dotenv-cli": "^8.0.0",
-        "eslint": "^9.30.1",
-        "eslint-plugin-import": "^2.32.0",
-        "eslint-plugin-jest": "^29.0.1",
-        "eslint-plugin-jsx-a11y": "^6.10.2",
-        "eslint-plugin-mui-path-imports": "^0.0.15",
-        "eslint-plugin-react": "^7.37.5",
-        "eslint-plugin-react-hooks": "^5.2.0",
-        "eslint-plugin-simple-import-sort": "^12.1.1",
-        "eslint-plugin-unused-imports": "^4.1.4",
-        "eslint-plugin-use-encapsulation": "^1.3.1",
-        "tsup": "^8.5.0",
-        "typescript": "^5.8.3",
-        "typescript-eslint": "^8.36.0",
-        "vite": "^7.0.4",
-        "vite-node": "^3.2.4"
-    },
-    "packageManager": "yarn@4.9.2",
-    "version": "0.1.20"
+  "private": true,
+  "repository": "git@github.com:igor-siergiej/jewellery-catalogue.git",
+  "author": "Igor Siergiej <igorsiergiej@gmail.com>",
+  "license": "MIT",
+  "scripts": {
+    "start:web": "dotenv -e .env -- yarn workspace @jewellery-catalogue/web start",
+    "start:web:with-mock": "dotenv -e .env -- yarn workspace @jewellery-catalogue/web start:with-mock",
+    "start:api": "dotenv -e .env -- yarn workspace @jewellery-catalogue/api start",
+    "start": "yarn start:web & yarn start:api",
+    "start:with-mock": "yarn start:web:with-mock & yarn start:api",
+    "lint": "eslint . --ext .ts,.tsx",
+    "lint:fix": "eslint . --ext .ts,.tsx --fix",
+    "prepare": "husky"
+  },
+  "workspaces": [
+    "packages/*"
+  ],
+  "devDependencies": {
+    "@igor-siergiej/eslint-config": "^0.0.9",
+    "concurrently": "^9.2.1",
+    "dotenv-cli": "^8.0.0",
+    "eslint": "^9.30.1",
+    "eslint-plugin-mui-path-imports": "^0.0.15",
+    "eslint-plugin-use-encapsulation": "^1.3.1",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.2.0",
+    "tsup": "^8.5.0",
+    "typescript": "^5.8.3",
+    "vite": "^7.0.4",
+    "vite-node": "^3.2.4"
+  },
+  "packageManager": "yarn@4.9.2",
+  "version": "0.1.19",
+  "lint-staged": {
+    "*.{ts,tsx}": [
+      "eslint --fix"
+    ]
+  }
 }
